<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="@drawable/sign_in"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:contentDescription="@string/img_Logo"
            android:id="@+id/img_Logo"
            android:layout_marginBottom="100dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/logotext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/tv_silakan"
            android:text="@string/tv_silakan"
            android:layout_below="@+id/img_Logo"
            android:textAlignment="center"
            android:layout_marginBottom="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <EditText
            android:id="@+id/et_username"
            android:autofillHints="@string/hint_username"
            android:inputType="text"
            android:drawableStart="@drawable/ic_baseline_account_circle_24"
            android:hint="@string/hint_username"
            android:layout_below="@+id/tv_silakan"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_password"
            android:id="@+id/et_password"
            android:hint="@string/hint_password"
            android:layout_below="@+id/et_username"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_centerHorizontal="true"
            android:autofillHints="@string/hint_password" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_password"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btn_sign_in"
            />

        <TextView
            android:id="@+id/tv_createaccount"
            android:layout_below="@+id/btn_login"
            android:text="@string/tv_createaccount"
            android:layout_marginTop="@dimen/fab_margin"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

    </RelativeLayout>

</LinearLayout>